--- a/app.css
+++ b/app.css
@@ -31,3 +31,81 @@ select {
   fill-opacity: .125;
   shape-rendering: crispEdges;
 }
+
+div#geoplot {
+  display: inline-block;
+}
+div#scatterplot {
+    overflow: hidden;
+    margin-bottom: 35px;
+}
+div#geoplot_container {
+  display: inline-block;
+}
+div#container_2 {
+    overflow: hidden;
+    display: inline-block;
+    position: absolute;
+    left: 40%;
+    top: 350px;
+}
+
+div#legend_dire_container {
+    position: relative;
+    color: white;
+    top: -407px;
+    left: 20px;
+    width: 377px;
+    border: black 1px solid;
+    height: 20px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    background-color: red;
+    opacity: 0.7;
+}
+
+#dire_text, #legend_dire_container > div {
+  display: inline-block;
+  padding-top: 4px;
+  opacity: 1.0;
+}
+
+#legend_dire_container > div:not(#dire_text) {
+  display: inline-block;
+  padding-top: 0px;
+  width: 10px;
+  height: 10px;
+  opacity: 1.0;
+}
+
+div#legend_radiant_container {
+    position: relative;
+    color: white;
+    bottom: 57px;
+    left: 20px;
+    width: 377px; 
+    border: black 1px solid;
+    height: 20px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
+    background-color: green;
+    opacity: 0.7;
+}
+
+#radiant_text, #legend_radiant_container > div {
+  display: inline-block;
+  padding-top: 4px;
+}
+
+#legend_radiant_container > div:not(#radiant_text) {
+  padding-top: 0px;
+  background: white;
+  width: 10px;
+  height: 10px;
+}
+
+#dire_text, #radiant_text {
+  margin-right: 20px;
+}
